[tool.poetry]
name = "tz-starks"
version = "0.1.0"
description = ""
authors = ["Michael Zaikin <mz@bakingbad.dev>"]
readme = "README.md"
packages = [{include = "stark101"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tqdm = "^4.65.0"
jupyter = "^1.0.0"
pytezos = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
